Pesan commit Anda di sini

--- a/templates/login.html
+++ b/templates/login.html
@@ -220,7 +220,7 @@
     >
       <div class="navbar-brand">
         <a class="navbar-item" href="/">
-            <img src="{{ url_for('static', filename='logo.jpg') }}" alt="Logo">
+          <img src="{{ url_for('static', filename='logo.jpg') }}" />
           <strong
             class="is-sparta logo-text"
             >SWEETER</strong
@@ -360,3 +360,4 @@
     </section>
   </body>
 </html>
+
